# riia-cowork-jun-demo

./: .env.example  .gitignore  CLAUDE.md  PLAN_STATUS.md  RITA_PRODUCTION_PLAN.md
riia-jun-release/: .dockerignore  .env.example  Dockerfile  README.md  Spec_Chat_Feature.md  Spec_DB.md  Spec_Data.md  Spec_HTML_Code.md  Spec_JS_Code.md  Spec_Python_Code.md  UI-Defect.txt  activate-env.ps1  conftest.py  docker-compose.yml  pyproject.toml  run_e2e_tests.sh  start.py  ui-testing.md
riia-jun-release/.github/workflows/: deploy.yaml
riia-jun-release/Specs/: Spec-Agent-Workflow.md  Spec_DB.md  Spec_Data.md  Spec_HTML_Code.md  Spec_JS_Code.md  Spec_RITA_App.md
riia-jun-release/alembic/: env.py
riia-jun-release/alembic/versions/: 11a27794a41e_initial_15_tables.py  fb6dd6e7e232_add_instruments_table.py
riia-jun-release/config/: base.yaml  development.yaml
riia-jun-release/config/instruments/: asml.yaml  banknifty.yaml  nifty.yaml  nvidia.yaml
riia-jun-release/dashboard/: ds.html  fno.html  index.html  ops.html  rita.html
riia-jun-release/dashboard/css/: responsive.css
riia-jun-release/docs/: ADR-001-three-tier-api.md  ADR-002-repository-pattern.md  ADR-003-database-sqlite.md  asml-model-tuning.md
riia-jun-release/k8s/: deployment.yaml  ingress.yaml  service.yaml
riia-jun-release/src/rita/: auth.py  config.py  database.py  exception_handlers.py  limiter.py  logging_config.py  main.py  metrics.py  middleware.py
riia-jun-release/terraform/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
riia-jun-release/test-results/: junit-ops-scenarios.xml  junit-rita-scenarios.xml
riia-jun-release/test-results/integration/: 2026-04-17T17-32-05-integration.xml  2026-04-17T17-33-45-integration.xml
(+199 files in other folders)
