[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rita"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "PyYAML>=6.0",
    "python-jose[cryptography]>=3.3",
    "pandas>=2.2",
    "numpy>=1.26",
    "stable-baselines3>=2.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "structlog>=24.1",
    "prometheus-fastapi-instrumentator>=6.1",
    "aiofiles>=23.2",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "httpx>=0.27",
    "ruff>=0.4",
    "pytest-playwright>=0.5",
    "requests>=2.31",
    "pytest-html>=4.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
